# cs2-plug

./: eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.ts  tsconfig.json
app/: layout.tsx  page.tsx
app/_components/: Button.tsx  Sidebar.tsx
app/lib/enums/: CommandEnum.ts
app/lib/hooks/: useCommand.ts  useEventListener.ts  useInvokeCommand.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: ServerCredentials.ts
src-tauri/src/: commands.rs  error.rs  main.rs  session_manager.rs
