# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cs2-plug"
version = "0.1.0"
description = ""
authors = ["Kyle Surowiec <kylesurowiec@me.com>"]
license = ""
repository = ""
default-run = "cs2-plug"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = [] }
ssh2 = "0.9.4"
thiserror = "1.0.63"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
